# abz

./: .clang-format  .gitignore  CMakeLists.txt  README.md
doc/: Doxyfile
include/abz/: compiler.hpp  os.hpp  type_traits.hpp
include/abz/chrono/: thread_clock.hpp
include/abz/detail/: macros.hpp
include/abz/random/: algorithm.hpp  random.hpp
src/chrono/: thread_clock.cpp
